Atualizar exibir pdf

--- a/viewcurso.html
+++ b/viewcurso.html
@@ -277,7 +277,7 @@
                 <div class="espaco">
                     <h4>Apostila</h4>
                     <div class="apostila">
-                        <embed width="600" height="500" alt="pdf" src="apostila/Introdução a Programação com Python.pdf"/>
+                        <iframe width="600" height="500" alt="pdf" src="apostila/Introdução a Programação com Python.pdf"></iframe>
                     </div>
                 </div>
             </div>
