--- a/viewcurso.html
+++ b/viewcurso.html
@@ -277,7 +277,7 @@
                 <div class="espaco">
                     <h4>Apostila</h4>
                     <div class="apostila">
-                        <iframe width="600" height="500" alt="pdf" src="apostila/Introdução a Programação com Python.pdf"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1L74WjoUMr9B6vCIy_qNBvK6CxTececjx/view" style="width:600px; height:500px;" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
