--- a/viewcurso.html
+++ b/viewcurso.html
@@ -276,9 +276,11 @@
                 </a>  
                 <div class="espaco">
                     <h4>Apostila</h4>
-                    <div class="apostila">
-                        <iframe src="https://drive.google.com/file/d/1L74WjoUMr9B6vCIy_qNBvK6CxTececjx/view" style="width:600px; height:500px;" frameborder="0"></iframe>
-                    </div>
+                    <object class="apostila" data="apostila/Introdução a Programação com Python.pdf" type="application/pdf" width="100%" height="200">
+                        <a href="apostila/Introdução a Programação com Python.pdf" >test.pdf</a>
+                    </object>
+
+
                 </div>
             </div>
                 
