Função de parar video

--- a/viewcurso.html
+++ b/viewcurso.html
@@ -323,7 +323,7 @@
                         
                     <div class="espaco">
                         <h4>Aula 1: Noções de Lógica de programação e algoritmos</h4>
-                        <iframe class="video" src="https://www.youtube.com/embed/6R2goK3-WY8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                        <iframe class="video" id="video" src="https://www.youtube.com/embed/6R2goK3-WY8?enablejsapi=1&html5=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                         gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
