--- a/viewcurso.html
+++ b/viewcurso.html
@@ -46,7 +46,7 @@
                     <ul id ='interna' class="topnav d-flex d-flex d-flex justify-content-around"  style = "background: #343a40" >
                         <li ><a href="cursos.html">Cursos</a></li>
                         <li ><a href="sobre.html">Sobre</a></li>                        
-                        <li ><a href="#contato">Contato </a></li>
+                        <li ><a href="contato.html">Contato </a></li>
                     </ul>
                 </div>
             </nav>
