Tentativa de implementar envio de email

--- a/contato.html
+++ b/contato.html
@@ -49,7 +49,7 @@
         <div id="conteudo">
             <h1>Formulário de Contato</h1>
 
-            <form method="POST" action="processa.php">
+            <form method="POST" action="email.php">
                 <label>Nome</label>
                 <input type="text" name="nome" placeholder="Nome Completo"><br>
 
@@ -57,7 +57,7 @@
                 <input type="text" name="email" placeholder="E-mail"><br>
 
                 <label>Mensagem</label>
-                <textarea name="mensagem" placeholder="Insira sua mensagem" rows="4" cols="50"></textarea><br><br>
+                <textarea name="mensagem" placeholder="Insira sua mensagem" rows="4" cols="50"></textarea><br>
 
                 <input type="submit" value="Enviar">
             </form>
