Mudança do link do curso

--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -128,7 +128,7 @@
         
 
             <div align='center' class="apresentacaocurso">
-                <iframe height="360" src="https://www.youtube.com/embed/VSFgDCtfS_8" frameborder="0" 
+                <iframe height="360" src="https://www.youtube.com/embed/oUCf-bn_jQk" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen ></iframe>    
             </div>
