Adição de instruções

--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -125,6 +125,19 @@
                 de aplicativos para smartphones e tablets, TVs inteligentes podem executar programas 
                 personalizados e até mesmo outros aparelhos que usamos no nosso dia-a-dia. Dê os seus 
                 primeiros passos no universo da programação!</p>
+
+                <h4 style="margin-left: 5%;">Instruções</h4>
+                <p>1- Ao entrar na página do curso de introdução a programção com python, você encontrá um sumário, onde poderá selecionar
+                    as seguintes opções: Apostila, 1º Modulo: Sumário, 1º Modulo: Mostrar conteúdo, 2º Modúlo: Introdução a Programação,
+                    2º Modúlo: Mostrar conteúdo. Caso queira acessar a apostila, basta clicar na opção "Apostila", para ver os conteúdo 
+                    abordados no primeiro modulo, basta clicar na opção 1º Modulo: Sumário. A opção 1º Modulo: Mostrar conteúdo, possui
+                    a função de exibir todas as aulas e materiais referente ao primeiro modulo. O mesmo acontecerá para o segundo modulo.
+                    <br><br>
+                    2- As atividades serão realizadas através de questionários, na qual, só poderá prosseguir ao responder todas as questões.
+                    Caso deseje ver a pontuação e os erros, bata clicar na opção que surgira ao finalizar o envio da atividade.
+                </p>
+
+    
         
 
             <div align='center' class="apresentacaocurso">
@@ -133,6 +146,7 @@
                 allowfullscreen ></iframe>    
             </div>
         </div>
+
 
         <div class="conteudo" >
             </br>
