Mudança na introdução da página - Sobre

--- a/sobre.html
+++ b/sobre.html
@@ -47,14 +47,13 @@
         <div id="conteudo">
             <div id= "texto" style="margin:30px;">
                 <h3> Sobre </h3>             
-                <p>Com a situação na qual vivenciamos percebemos que muitas instituições
-                não conseguiram se manter e as que conseguiram não conseguem oferecer
-                seus cursos com uma qualidade desejada ou prometida. Isso se da pelo fato de
-                muitas vezes não possuírem um ambiente virtual adequado para esses fins e
-                profissionais despreparados para o ensino virtual. Logo se faz necessário um
-                ambiente virtual que possa possibilitar cursos virtuais de qualidades. Permitindo
-                com que tanto instituições como pessoas possam hospedar seus cursos de
-                forma simples e prática.</p>
+                <p>Com a situação na qual vivenciamos percebemos que muitas instituições não conseguiram
+                     se manter e as que conseguiram não conseguem oferecer seus cursos com uma qualidade
+                      desejada ou prometida. Isso se da pelo fato de muitas vezes não possuírem um ambiente 
+                      virtual adequado para esses fins, e profissionais despreparados para o ensino virtual. 
+                      Tendo isto em mente a plataforma PlayView tem como objetivo ajudar pessoas que possuem 
+                      interesse em aprender a programar na linguagem Python, com vídeos curtos e explicativos, 
+                      além de atividades rápidas e práticas para fixação do conteúdo.</p>
                 
                 <h4 style="color: #3d844b; margin:10px;margin-top:20px;">Finalidade</h4>
                 <p>Oferecer cursos de tecnologia, em um ambiente virtual de aprendizagem, com o intuito de incentivar
